# sea-snake

./: .gitignore  CMakeLists.txt  README.md  draw.cpp  draw.h  game_tick.cpp  game_tick.h  global_structs.h  main.cpp  main.h  misc.cpp  misc.h
src/: draw.cpp  draw.h  game_tick.cpp  game_tick.h  global_structs.h  main.cpp  main.h  misc.cpp  misc.h
